kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: icgroup-ingress
  namespace: icgroup
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: ic-webapp.icgroup.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ic-webapp-service
                port:
                  number: 8080

    - host: odoo.icgroup.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: odoo-service
                port:
                  number: 8069

    - host: pgadmin.icgroup.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin-service
                port:
                  number: 80
